--- a/LungLife/lunglife_frontend/src/app/security/two-fa-setup/two-fa-setup.page.html
+++ b/LungLife/lunglife_frontend/src/app/security/two-fa-setup/two-fa-setup.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-title>Configurar Autenticación 2FA</ion-title>
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+      <ion-back-button defaultHref="/profile"></ion-back-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
